praktikum/wortmann/files/deployments/webapp/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sgse22
  namespace: sgse22
  labels:
    app: sgse22
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sgse22
  template:
    metadata:
      labels:
        app: sgse22
    spec:
      containers:
        - name: sgse22
          image: internal-registry/webapp:1.3
          ports:
            - containerPort: 80
          volumeMounts:
            - name: ca-certs
              mountPath: /etc/ssl/certs/ca-certificates.crt
              readOnly: true
      volumes:
        - name: ca-certs
          hostPath:
            path: /etc/ssl/certs/ca-certificates.crt
            type: File
